Handling the empty screenshots list case